--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,5 +16,10 @@
 // iCheck Bootstrap
 @import '~admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css';
 
+// DataTables
+@import '~admin-lte/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css';
+@import '~admin-lte/plugins/datatables-responsive/css/responsive.bootstrap4.min.css';
+
+@import '~admin-lte/plugins/toastr/toastr.min.css';
 // // Bootstrap
 // @import '~bootstrap/scss/bootstrap';
